Add display to Dom

--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
     <title>Project-Library</title>
 </head>
 <body>
-    <h1>hello</h1>
+    <main>
+        <div class="bookCards">
+            <div class="bookCard">
+                <div>Book Number: </div>
+                <div>Title:</div>
+                <div>Number of Pages: </div>
+                <div>Author: </div>
+                <div>Has Been Read: </div>
+            </div>
+        </div>
+
+    </main>
+
     <script src="script.js"></script>
 </body>
 </html>
