--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <main>
         <div class="bookCards">
-            <div class="bookCard">
+            <!-- <div class="bookCard">
                 <div>Book Number: </div>
                 <div>Title:</div>
                 <div>Number of Pages: </div>
                 <div>Author: </div>
                 <div>Has Been Read: </div>
-            </div>
+            </div> -->
         </div>
 
     </main>
